--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -3,29 +3,19 @@
 
 <head>
   <title>App</title>
+  <meta name="theme-color" content="#5ecf80"/>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
+  
+  <link rel="manifest" href="/manifest.json" />
 
-
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= stylesheet_link_tag request.protocol + request.host + ":3030/css/embed.css" %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag request.protocol + request.host + ":3030/embed.js" %>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Roboto:300,400,500|Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp">
-
-  <script>
-  document.addEventListener("turbolinks:load", ()=> {
-      var options = {
-        id: <%= current_or_guest_user.try(:id) %>
-      }; 
-
-      Botkit.boot(options);
-  })
-  </script>
 
 </head>
   <body>
@@ -33,13 +23,13 @@
       
       <%= render partial: "layouts/app-top-bar" %>
 
-      <% if current_page?(controller: 'feeds', action: 'index') %>
+      <% if !current_page?("/offline") && current_page?(controller: 'feeds', action: 'index') %>
         <section class="me-page__feed-section">
           <div class="me-overlay">
           </div>
           <%= yield %>
         </section>
-      <% elsif  current_page?(controller: 'events', action: 'show') %>
+      <% elsif !current_page?("/offline") && current_page?(controller: 'events', action: 'show') %>
         <section class="me-page__events-section">
           <div class="me-overlay">
           </div>
@@ -49,5 +39,18 @@
     </div>
 
   </body>
+
+  <%= javascript_include_tag 'application' %>
+  <%= javascript_pack_tag 'application' %>
+  <%= javascript_include_tag request.protocol + request.host + ":3030/embed.js" %>
+  <script>
+  document.addEventListener("turbolinks:load", ()=> {
+      var options = {
+        id: <%= current_or_guest_user.try(:id) %>
+      }; 
+
+      Botkit.boot(options);
+  })
+  </script>
 
 </html>
