--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <link rel="manifest" href="/manifest.json" />
 
   <%= stylesheet_link_tag 'application', media: 'all' %>
-  <%= stylesheet_link_tag request.protocol + request.host + ":3030/css/embed.css" %>
+  <%= stylesheet_link_tag request.protocol + request.host + "/bot/css/embed.css" %>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Roboto:300,400,500|Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp">
 
@@ -42,7 +42,7 @@
 
   <%= javascript_include_tag 'application' %>
   <%= javascript_pack_tag 'application' %>
-  <%= javascript_include_tag request.protocol + request.host + ":3030/embed.js" %>
+  <%= javascript_include_tag request.protocol + request.host + "/bot/embed.js" %>
   <script>
   document.addEventListener("turbolinks:load", ()=> {
       var options = {
