Adjust in style for feed

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -2,7 +2,7 @@ $brand-color: #5ecf80;
 
 $font-primary-color: #000000;
 $font-secondary-color: #4a4a4a;
-$font-tertiary-color: #c1c1c1;
+$font-tertiary-color: #909090;
 
 $link-color: $brand-color;
 
