--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -1,4 +1,4 @@
-<header id="top-bar" class="me-top-app-bar mdc-top-app-bar mdc-top-app-bar--fixed" style="top: 0"
+<header id="top-bar" class="me-top-app-bar mdc-top-app-bar" style="top: 0"
 	data-turbolinks-permanent>
 	<div class="mdc-top-app-bar__row">
 		<section
