--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -13,6 +13,8 @@
 
 */
 
+$mdc-typography-font-family: "Cabin";
+
 $mdc-typography-styles-headline1: (
 font-size: 1.8rem,
 line-height: 1.1rem,
@@ -70,7 +72,7 @@ body {
   height: 100vh;
   // overflow: hidden;
   margin: 0;
-  font-family: Roboto;
+  font-family: Cabin, Arial;
   font-size: 14px;
   color: #212121;
   
