--- a/web/app/assets/stylesheets/components/me-favorite.scss
+++ b/web/app/assets/stylesheets/components/me-favorite.scss
@@ -1,17 +1,19 @@
-@import '@material/card/_mixins';
-@import '../_mixins';
-@import '../variables';
+@import "@material/card/_mixins";
+@import "../_mixins";
+@import "../variables";
 
 $gutter: 6px;
 
 .me-favorite {
   position: relative;
+  @include mdc-layout-grid-media-query_("phone") {
+    display: none;
+  }
 
   &__list {
-
     &::before {
       content: close-quote;
-      background: linear-gradient(to left, transparent , $background-color );
+      background: linear-gradient(to left, transparent, $background-color);
       width: 126px;
       height: 90%;
       position: absolute;
@@ -25,7 +27,7 @@ $gutter: 6px;
 
     &::after {
       content: close-quote;
-      background: linear-gradient(to right, transparent , $background-color );
+      background: linear-gradient(to right, transparent, $background-color);
       width: 126px;
       height: 90%;
       position: absolute;
@@ -59,13 +61,13 @@ $gutter: 6px;
 
   & .mdc-layout-grid__inner {
     display: grid;
-    grid-gap: 6px;
+    grid-gap: 8px;
     grid-template-columns: inherit;
     grid-template-rows: minmax(150px, 1fr);
     grid-auto-flow: column;
     grid-auto-columns: 54px;
-    padding-bottom: calc(.75 * #{$gutter});
-    margin-bottom: calc(-.25 * #{$gutter});
+    padding-bottom: calc(0.75 * #{$gutter});
+    margin-bottom: calc(-0.25 * #{$gutter});
     // @include add-horizontal-scroll();
   }
 
@@ -87,8 +89,8 @@ $gutter: 6px;
     background-color: inherit;
     @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
 
-
-    &__title, &__date {
+    &__title,
+    &__date {
       pointer-events: none;
       margin: 3px 0 0 0;
       line-height: 1.1em;
@@ -100,13 +102,18 @@ $gutter: 6px;
     }
 
     &__title {
-      font-size: 12px;
-      font-weight: 400;
+      color: $font-primary-color;
+      font-size: 14px;
+      margin: 3px 0 0 0px;
+      font-weight: 500;
     }
 
     &__date {
-      font-weight: 300;
+      color: $font-secondary-color;
+      text-transform: uppercase;
       font-size: 11px;
+      margin: 8px 0 0 0px;
+      font-weight: 800;
     }
 
     &__remove {
@@ -129,5 +136,4 @@ $gutter: 6px;
     right: 0;
     top: 0px;
   }
-
 }
