--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -57,14 +57,14 @@ $mdc-layout-grid-columns: (
 
   & .mdc-layout-grid {
     --mdc-layout-grid-margin-desktop: 0;
-    --mdc-layout-grid-gutter-desktop: 8px;
+    --mdc-layout-grid-gutter-desktop: 12px;
 
     @include mdc-layout-grid-media-query_("phone") {
       background-color: $background-color;
       border-radius: 20px;
       border-radius: 20px;
       margin-bottom: 35px;
-      @include mdc-elevation($z-value: 4)
+      @include mdc-elevation($z-value: 4);
     }
 
     & a {
@@ -89,6 +89,9 @@ $mdc-layout-grid-columns: (
     }
     @include mdc-layout-grid-media-query_("phone") {
       @include mdc-layout-grid-inner($size: "phone", $margin: 0, $gutter: 15px);
+      & .mdc-layout-grid__cell:first-child {
+        grid-column-end: span 8;
+      }
     }
   }
 
@@ -98,23 +101,24 @@ $mdc-layout-grid-columns: (
     box-shadow: none;
     background: none;
     position: relative;
+    margin: 0 0 25px 0;
     @include mdc-card-shape-radius($radius: 0, $rtl-reflexive: false);
     @include mdc-layout-grid-media-query_("phone") {
-      min-height: 260px;
+      min-height: 165px;
     }
 
     &__place {
-      display: none;
-      @include mdc-layout-grid-media-query_("phone") {
-        display: inline-block;
-      }
+      // display: none;
+      // @include mdc-layout-grid-media-query_("phone") {
+      //   display: inline-block;
+      // }
     }
 
     &__date {
-      display: none;
-      @include mdc-layout-grid-media-query_("phone") {
-        display: inline-block;
-      }
+      // display: none;
+      // @include mdc-layout-grid-media-query_("phone") {
+      //   display: inline-block;
+      // }
     }
 
     & .mdc-typography--headline1 {
@@ -162,10 +166,10 @@ $mdc-layout-grid-columns: (
 
     &:hover {
       & .mdc-card__media {
-        transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-        border-radius: 2px;
-        box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
-          0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
+        // transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+        // border-radius: 2px;
+        // box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+        //   0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
       }
     }
   }
