--- a/web/app/assets/stylesheets/components/me-filter.scss
+++ b/web/app/assets/stylesheets/components/me-filter.scss
@@ -15,6 +15,7 @@
     background-color: $background-color;
     border: 1px solid $border-color;
     font-weight: 400;
+    font-size: 16px;
     text-transform: lowercase;
     @include mdc-layout-grid-media-query_("phone") {
       border: unset;
