Add snackbar to notice

--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -65,6 +65,7 @@ font-weight: 100
 @import "components/me-components";
 @import "@material/fab/mdc-fab";
 @import "@material/elevation/mdc-elevation";
+@import "@material/snackbar/mdc-snackbar";
 
 
 body {
