Adjust event single

--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -111,6 +111,9 @@ $description-color: $font-secondary-color;
 
     .mdc-typography--body2 {
       font-weight: 400;
+      padding: 0 16px;
+      font-family: Cabin;
+      font-size: 14px;
     }
   }
 
