--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -69,6 +69,7 @@ $description-color: $font-secondary-color;
     font-size: 14px;
     margin: 3px 0 0 0px;
     font-weight: 200;
+    max-width: 80%;
   }
 
   &__title {}
@@ -81,8 +82,8 @@ $description-color: $font-secondary-color;
 
   &__like-button {
     position: absolute;
-    bottom: 6px;
-    right: 6px;
+    bottom: -6px;
+    right: 0;
   }
 
   &--single {
