--- a/web/app/assets/stylesheets/components/me-favorite.scss
+++ b/web/app/assets/stylesheets/components/me-favorite.scss
@@ -102,10 +102,11 @@ $gutter: 6px;
     }
 
     &__title {
-      color: $font-primary-color;
-      font-size: 14px;
-      margin: 3px 0 0 0px;
-      font-weight: 500;
+      color: $font-secondary-color;
+      font-size: 13px;
+      margin: 4px 0 0 0px;
+      font-weight: 400;
+      padding-right: 6px;
     }
 
     &__date {
