--- a/web/app/assets/stylesheets/components/me-icon-button.scss
+++ b/web/app/assets/stylesheets/components/me-icon-button.scss
@@ -3,6 +3,10 @@
 
 $fill-color: #ffffff;
 
+.me-icon-button {
+  
+}
+
 .me-feed {
   .me-icon-button {
 
@@ -18,9 +22,9 @@ $fill-color: #ffffff;
         @include mdc-icon-button-size($width: 30px, $height: 30px, $padding: 0);
         background: none;
       }
-      
+
       &:hover {}
-      
+
       &--on {
         @include mdc-icon-button-ink-color($color: $brand-color);
       }
@@ -33,7 +37,7 @@ $fill-color: #ffffff;
   }
 }
 
-.me-single {
+.me-card--single {
   .me-icon-button {
 
     &.mdc-icon-button {
@@ -41,20 +45,21 @@ $fill-color: #ffffff;
       transition: 0.2s all ease 0s;
       border-radius: 100%;
       @include mdc-icon-button-ink-color($color: $icon-light-color);
-      @include mdc-icon-button-size($width: 35px, $height: 35px, $padding: 0);
-
+      @include mdc-icon-button-size($width: 38px, $height: 38px, $padding: 6px);
+      @include mdc-elevation($z-value: 4);
+      
       &:hover {
-        // box-shadow: 0 0 0 3px $brand-color;
-        // background: $brand-color;
+        @include mdc-elevation($z-value: 2);
       }
-
+      
       &--on {
+        background: $icon-background-color;
         @include mdc-icon-button-ink-color($color: $brand-color);
-        // background: $brand-color;
+        @include mdc-elevation($z-value: 2);
       }
 
       & .material-icons-sharp {
-        font-size: 30px;
+        font-size: 38px;
       }
     }
   }
