--- a/web/app/views/feeds/_section.html.erb
+++ b/web/app/views/feeds/_section.html.erb
@@ -99,7 +99,7 @@
           <div class="mdc-card__media mdc-card__media--16-9"
             style="background-image: url('<%= rails_blob_url(event.cover) if event.cover.attached? %>')">
             <a href="<%= event.url %>">
-              <div data-target="event.overlay" class="me-card__overlay"></div>
+              <div data-target="event.overlay" class="me-card__overlay mdc-ripple-surface"></div>
             </a>
             
             <% if false %>
