--- a/web/app/views/feeds/_section.html.erb
+++ b/web/app/views/feeds/_section.html.erb
@@ -97,7 +97,7 @@
           <% end %>
           
           <div class="mdc-card__media mdc-card__media--16-9"
-            style="background-image: url('<%= rails_blob_url(event.cover) if event.cover.attached? %>')">
+            style="background-image: url('<%= event.image[:feed].url if event.image[:feed].exists? %>')">
             <a href="<%= event.url %>">
               <div data-target="event.overlay" class="me-card__overlay mdc-ripple-surface"></div>
             </a>
