--- a/web/app/views/feeds/train.html.erb
+++ b/web/app/views/feeds/train.html.erb
@@ -52,7 +52,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
           <div class="me-card mdc-card event-<%= event.id %>" data-target="favorite.event" data-action="mouseover->favorite#showEventName">
             <a href="<%= event.url %>">
-              <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('<%= event.cover_url %>')">
+              <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('<%= event.image.url %>')">
               </div>
               <div class="me-card__date" data-target="favorite.date">
                 <%= event.day_of_week %>
