--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -1,17 +1,14 @@
 <p id="notice"><%= notice %></p>
-
-
-
 <% if current_user && current_user.admin? %>
-<a href="<%= @event.url %>/edit">Editar</a>
-<a href="/train">Treinar</a>
+  <a href="<%= @event.url %>/edit">Editar</a>
+  <a href="/train">Treinar</a>
 <% end %>
-
 <div class="me-card me-card--single mdc-card event-<%= @event.id %>" data-controller="event" data-target="event.event"
   data-event-favorited="<%= current_user and current_user.taste_events_saved?(@event.id) if current_user and current_user %>"
   data-event-identifier="<%= @event.id %>"
   data-event-modifier="single">
   <div class="mdc-card__media mdc-card__media--16-9" style="background-image: url('<%= @event.image[:single].url if @event.image[:single].exists? %>')">
+    <% if current_user %>
     <div class="me-card__like-button" data-action="click->event#like">
       <div data-target="event.like">
         <button data-target="event.likeButton" id="add-to-favorites"
@@ -22,25 +19,24 @@
         </button>
       </div>
     </div>
+    <% end %>
   </div>
-
   <div class="me-card__primary">
     <h2 class="mdc-card__title mdc-typography--headline6">
       <%= @event.name %>
     </h2>
   </div>
-
   <div class="me-card__secondary">
     <h3 class="mdc-card__subtitle mdc-typography--subtitle1">
     </h3>
-
     <div class="mdc-typography--body2">
       <b>Quando:</b> <%= @event.day_of_week %><br>
       <% if @event.place %>
-      <b>Local:</b> <%= @event.place_name %><br>
-      <b>Endereço:</b> <%= @event.geographic['address'] %><br>
+        <b>Local:</b> <%= @event.place_name %><br>
+        <b>Endereço:</b> <%= @event.geographic['address'] %><br>
       <% end %>
-      <br><br>
+      <br>
+      <br>
       <%= @event.description.html_safe %><br>
     </div>
   </div>
